# V2Django

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  run.sh
Upstream/: admin.py  apps.py  manager.py  models.py  tasks.py
Upstream/migrations/: 0001_initial.py
Users/: admin.py  apps.py  commands.py  forms.py  manager.py  models.py  serializers.py  tasks.py  urls.py  views.py  webhooks.py
Users/management/commands/: profile-update-v2ray.py  subs-update-due-notification.py  subs-update-usage.py  subscribe-usage-update.py  update-subs-due-notification.py  update-subs-state.py  update-subs-usage.py  update-user-state.py  update-user-v2ray.py  user-state-update.py
Users/management/commands/Base/: Mixins.py
Users/management/commands/base/: BaseCommand.py
Users/migrations/: 0001_initial.py  0001_squashed_0008_remove_v2rayprofile_active_system_and_more.py  0002_alter_v2rayprofile_admin_message_and_more.py  0003_v2rayprofile_v2ray_state_and_more.py  0004_remove_v2rayprofile_system_message_and_more.py  0005_remove_subscription_start_volume.py  0006_alter_subscription_options.py  0007_rename_start_date_subscription_created_at.py  0008_remove_v2rayprofile_active_system_and_more.py  0009_subscription_expired_at.py  0010_fill_expired_at.py  0011_subscription_usage_at_expire.py  0012_alter_subscription_options_and_more.py  0013_remove_subscription_usage_at_expire_and_more.py  0014_fill_due_date.py  0015_alter_subscription_downlink_and_more.py  0016_subscription_uuid.py  0017_remove_subscription_uuid_and_more.py  0018_alter_subscription_due_date.py  0019_alter_subscription_state.py
Utils/: admin.py  helpers.py  models.py  notifier.py
V2Django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
V2Django/management/commands/: celery-beats.py  celery-worker.py  celery_base.py  subscribe-usage-update.py
V2Django/management/commands/Base/: Mixins.py
V2Django/management/commands/base/: celery_base.py
V2RayMan/: __init__.py  api.py  commands.py  config.py  exeptions.py  influxdb.py
V2RayMan/v2ray_proto/: config_pb2.py
V2RayMan/v2ray_proto/app/browserforwarder/: config_pb2.py
V2RayMan/v2ray_proto/app/commander/: config_pb2.py
V2RayMan/v2ray_proto/app/dispatcher/: config_pb2.py
V2RayMan/v2ray_proto/transport/: config_pb2.py
(+91 files in other folders)
